welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: reassignment to val
	if (a=b=c) return 20
             ^greenTicket:4: error: reassignment to val
	if (a=b || a=c || b=c) return 10}
             ^greenTicket:4: error: type mismatch;
 found   : Unit
 required: Int
	if (a=b || a=c || b=c) return 10}
        ^